--- a/index.html
+++ b/index.html
@@ -1,10 +1,97 @@
 <!DOCTYPE html>
-<html>
+<html lang="tr">
 <head>
-  <title>Ensarware</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ensarware - Projelerim</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #0e0e10;
+      color: #f0f0f0;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #1a1a1d;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.5);
+    }
+    h1 {
+      margin: 0;
+      font-size: 2.5em;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 30px 20px;
+    }
+    .project {
+      background-color: #1f1f23;
+      padding: 20px;
+      margin-bottom: 20px;
+      border-radius: 12px;
+      transition: transform 0.2s ease;
+    }
+    .project:hover {
+      transform: scale(1.01);
+    }
+    .project h2 {
+      margin-top: 0;
+      color: #61dafb;
+    }
+    .project a {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 8px 14px;
+      background-color: #61dafb;
+      color: #000;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background-color 0.2s;
+    }
+    .project a:hover {
+      background-color: #4fc3f7;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      color: #777;
+      font-size: 0.9em;
+    }
+  </style>
 </head>
 <body>
-  <h1>Ensarware'e Hoş Geldiniz</h1>
-  <p>Projelerim: SuperTinyDNSSwitcher, TempDeleter, WhatsMyIP</p>
+  <header>
+    <h1>Ensarware Projeleri</h1>
+    <p>Sade, hızlı ve özgür yazılımlar.</p>
+  </header>
+
+  <div class="container">
+    <div class="project">
+      <h2>SuperTinyDNSSwitcher</h2>
+      <p>Hızlı DNS değiştirme aracı. Sade ve kullanışlı.</p>
+      <a href="#">İndir (.exe)</a>
+    </div>
+
+    <div class="project">
+      <h2>TempDeleter</h2>
+      <p>Geçici dosyaları tek tıkla siler. Sistemini rahatlatır.</p>
+      <a href="#">İndir (.exe)</a>
+    </div>
+
+    <div class="project">
+      <h2>WhatsMyIP</h2>
+      <p>IP adresini saniyeler içinde öğren. Şık arayüz.</p>
+      <a href="#">İndir (.exe)</a>
+    </div>
+  </div>
+
+  <footer>
+    &copy; 2025 Ensarware. Tüm hakları saklıdır.
+  </footer>
 </body>
 </html>
+
